# lol_bayes

./: README.md  pyproject.toml  requirements  requirements.txt
.github/workflows/: python-package.yml
bayes_lol_client/: __init__.py  api.py  emh.py  errors.py  historic.py  python-package.yml  sleep.py  utils.py
bayesapiwrapper/: __init__.py  bayesapiwrapper.py
docs/: conf.py  index.rst
docs/source/: bayes_lol_client.rst  conf.py  index.rst
docs/source/_static/: custom.css
tests/: test_config.py
