[tool.poetry]
name = "bayesapiwrapper"
version = "0.1.4"
description = ""
authors = ["Santiago Kozak <santikzk1406@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
