[tool.poetry]
name = "lol_bayes"
version = "0.0.1"
description = "Wrapper for Bayes V2 League of Legends API"
authors = ["Allan Cao <allan@allancao.ca>, "Santiago Kozak <kozaksantiago@gmail.com>"]
homepage = "https://github.com/Allan-Cao/lol_bayes"
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
requests = "^2.31.0"
pytz = "^2023.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
